tests/ui/suggestions/dont-suggest-ref/move-into-closure.stderr
error[E0507]: cannot move out of `x.0`, as `x` is a captured variable in an `Fn` closure
  --> $DIR/move-into-closure.rs:49:21
   |
LL |     let x = X(Y);
   |         - captured outer variable
...
LL |     consume_fn(|| {
   |                -- captured by this `Fn` closure
LL |         let X(_t) = x;
   |               --    ^
   |               |
   |               data moved here
   |               move occurs because `_t` has type `Y`, which does not implement the `Copy` trait
   |
help: `Fn` and `FnMut` closures require captured values to be able to be consumed multiple times, but an `FnOnce` consume them only once
  --> $DIR/move-into-closure.rs:13:18
   |
LL | fn consume_fn<F: Fn()>(_f: F) { }
   |                  ^^^^
help: consider borrowing here
   |
LL |         let X(_t) = &x;
   |                     +

error[E0507]: cannot move out of `e.0`, as `e` is a captured variable in an `Fn` closure
  --> $DIR/move-into-closure.rs:52:34
   |
LL |     let e = Either::One(X(Y));
   |         - captured outer variable
...
LL |     consume_fn(|| {
   |                -- captured by this `Fn` closure
...
LL |         if let Either::One(_t) = e { }
   |                            --    ^
   |                            |
   |                            data moved here
   |                            move occurs because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: `Fn` and `FnMut` closures require captured values to be able to be consumed multiple times, but an `FnOnce` consume them only once
  --> $DIR/move-into-closure.rs:13:18
   |
LL | fn consume_fn<F: Fn()>(_f: F) { }
   |                  ^^^^
help: consider borrowing here
   |
LL |         if let Either::One(_t) = &e { }
   |                                  +

error[E0507]: cannot move out of `e.0`, as `e` is a captured variable in an `Fn` closure
  --> $DIR/move-into-closure.rs:55:37
   |
LL |     let e = Either::One(X(Y));
   |         - captured outer variable
...
LL |     consume_fn(|| {
   |                -- captured by this `Fn` closure
...
LL |         while let Either::One(_t) = e { }
   |                               --    ^
   |                               |
   |                               data moved here
   |                               move occurs because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: `Fn` and `FnMut` closures require captured values to be able to be consumed multiple times, but an `FnOnce` consume them only once
  --> $DIR/move-into-closure.rs:13:18
   |
LL | fn consume_fn<F: Fn()>(_f: F) { }
   |                  ^^^^
help: consider borrowing here
   |
LL |         while let Either::One(_t) = &e { }
   |                                     +

error[E0507]: cannot move out of `e.0`, as `e` is a captured variable in an `Fn` closure
  --> $DIR/move-into-closure.rs:58:15
   |
LL |     let e = Either::One(X(Y));
   |         - captured outer variable
...
LL |     consume_fn(|| {
   |                -- captured by this `Fn` closure
...
LL |         match e {
   |               ^
...
LL |             Either::One(_t)
   |                         --
   |                         |
   |                         data moved here
   |                         move occurs because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: `Fn` and `FnMut` closures require captured values to be able to be consumed multiple times, but an `FnOnce` consume them only once
  --> $DIR/move-into-closure.rs:13:18
   |
LL | fn consume_fn<F: Fn()>(_f: F) { }
   |                  ^^^^
help: consider borrowing here
   |
LL |         match &e {
   |               +

error[E0507]: cannot move out of `e.0`, as `e` is a captured variable in an `Fn` closure
  --> $DIR/move-into-closure.rs:64:15
   |
LL |     let e = Either::One(X(Y));
   |         - captured outer variable
...
LL |     consume_fn(|| {
   |                -- captured by this `Fn` closure
...
LL |         match e {
   |               ^
...
LL |             Either::One(_t) => (),
   |                         --
   |                         |
   |                         data moved here
   |                         move occurs because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: `Fn` and `FnMut` closures require captured values to be able to be consumed multiple times, but an `FnOnce` consume them only once
  --> $DIR/move-into-closure.rs:13:18
   |
LL | fn consume_fn<F: Fn()>(_f: F) { }
   |                  ^^^^
help: consider borrowing here
   |
LL |         match &e {
   |               +

error[E0507]: cannot move out of `x.0`, as `x` is a captured variable in an `Fn` closure
  --> $DIR/move-into-closure.rs:72:25
   |
LL |     let x = X(Y);
   |         - captured outer variable
...
LL |     consume_fn(|| {
   |                -- captured by this `Fn` closure
...
LL |         let X(mut _t) = x;
   |               ------    ^
   |               |
   |               data moved here
   |               move occurs because `_t` has type `Y`, which does not implement the `Copy` trait
   |
help: `Fn` and `FnMut` closures require captured values to be able to be consumed multiple times, but an `FnOnce` consume them only once
  --> $DIR/move-into-closure.rs:13:18
   |
LL | fn consume_fn<F: Fn()>(_f: F) { }
   |                  ^^^^
help: consider borrowing here
   |
LL |         let X(mut _t) = &x;
   |                         +

error[E0507]: cannot move out of `em.0`, as `em` is a captured variable in an `Fn` closure
  --> $DIR/move-into-closure.rs:75:38
   |
LL |     let mut em = Either::One(X(Y));
   |         ------ captured outer variable
...
LL |     consume_fn(|| {
   |                -- captured by this `Fn` closure
...
LL |         if let Either::One(mut _t) = em { }
   |                            ------    ^^
   |                            |
   |                            data moved here
   |                            move occurs because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: `Fn` and `FnMut` closures require captured values to be able to be consumed multiple times, but an `FnOnce` consume them only once
  --> $DIR/move-into-closure.rs:13:18
   |
LL | fn consume_fn<F: Fn()>(_f: F) { }
   |                  ^^^^
help: consider borrowing here
   |
LL |         if let Either::One(mut _t) = &em { }
   |                                      +

error[E0507]: cannot move out of `em.0`, as `em` is a captured variable in an `Fn` closure
  --> $DIR/move-into-closure.rs:78:41
   |
LL |     let mut em = Either::One(X(Y));
   |         ------ captured outer variable
...
LL |     consume_fn(|| {
   |                -- captured by this `Fn` closure
...
LL |         while let Either::One(mut _t) = em { }
   |                               ------    ^^
   |                               |
   |                               data moved here
   |                               move occurs because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: `Fn` and `FnMut` closures require captured values to be able to be consumed multiple times, but an `FnOnce` consume them only once
  --> $DIR/move-into-closure.rs:13:18
   |
LL | fn consume_fn<F: Fn()>(_f: F) { }
   |                  ^^^^
help: consider borrowing here
   |
LL |         while let Either::One(mut _t) = &em { }
   |                                         +

error[E0507]: cannot move out of `em.0`, as `em` is a captured variable in an `Fn` closure
  --> $DIR/move-into-closure.rs:81:15
   |
LL |     let mut em = Either::One(X(Y));
   |         ------ captured outer variable
...
LL |     consume_fn(|| {
   |                -- captured by this `Fn` closure
...
LL |         match em {
   |               ^^
...
LL |             Either::One(mut _t)
   |                         ------
   |                         |
   |                         data moved here
   |                         move occurs because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: `Fn` and `FnMut` closures require captured values to be able to be consumed multiple times, but an `FnOnce` consume them only once
  --> $DIR/move-into-closure.rs:13:18
   |
LL | fn consume_fn<F: Fn()>(_f: F) { }
   |                  ^^^^
help: consider borrowing here
   |
LL |         match &em {
   |               +

error[E0507]: cannot move out of `em.0`, as `em` is a captured variable in an `Fn` closure
  --> $DIR/move-into-closure.rs:87:15
   |
LL |     let mut em = Either::One(X(Y));
   |         ------ captured outer variable
...
LL |     consume_fn(|| {
   |                -- captured by this `Fn` closure
...
LL |         match em {
   |               ^^
...
LL |             Either::One(mut _t) => (),
   |                         ------
   |                         |
   |                         data moved here
   |                         move occurs because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: `Fn` and `FnMut` closures require captured values to be able to be consumed multiple times, but an `FnOnce` consume them only once
  --> $DIR/move-into-closure.rs:13:18
   |
LL | fn consume_fn<F: Fn()>(_f: F) { }
   |                  ^^^^
help: consider borrowing here
   |
LL |         match &em {
   |               +

error[E0507]: cannot move out of `x.0`, as `x` is a captured variable in an `FnMut` closure
  --> $DIR/move-into-closure.rs:106:21
   |
LL |     let x = X(Y);
   |         - captured outer variable
...
LL |     consume_fnmut(|| {
   |                   -- captured by this `FnMut` closure
LL |         let X(_t) = x;
   |               --    ^
   |               |
   |               data moved here
   |               move occurs because `_t` has type `Y`, which does not implement the `Copy` trait
   |
help: `Fn` and `FnMut` closures require captured values to be able to be consumed multiple times, but an `FnOnce` consume them only once
  --> $DIR/move-into-closure.rs:25:21
   |
LL | fn consume_fnmut<F: FnMut()>(_f: F) { }
   |                     ^^^^^^^
help: consider borrowing here
   |
LL |         let X(_t) = &x;
   |                     +

error[E0507]: cannot move out of `e.0`, as `e` is a captured variable in an `FnMut` closure
  --> $DIR/move-into-closure.rs:109:34
   |
LL |     let e = Either::One(X(Y));
   |         - captured outer variable
...
LL |     consume_fnmut(|| {
   |                   -- captured by this `FnMut` closure
...
LL |         if let Either::One(_t) = e { }
   |                            --    ^
   |                            |
   |                            data moved here
   |                            move occurs because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: `Fn` and `FnMut` closures require captured values to be able to be consumed multiple times, but an `FnOnce` consume them only once
  --> $DIR/move-into-closure.rs:25:21
   |
LL | fn consume_fnmut<F: FnMut()>(_f: F) { }
   |                     ^^^^^^^
help: consider borrowing here
   |
LL |         if let Either::One(_t) = &e { }
   |                                  +

error[E0507]: cannot move out of `e.0`, as `e` is a captured variable in an `FnMut` closure
  --> $DIR/move-into-closure.rs:112:37
   |
LL |     let e = Either::One(X(Y));
   |         - captured outer variable
...
LL |     consume_fnmut(|| {
   |                   -- captured by this `FnMut` closure
...
LL |         while let Either::One(_t) = e { }
   |                               --    ^
   |                               |
   |                               data moved here
   |                               move occurs because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: `Fn` and `FnMut` closures require captured values to be able to be consumed multiple times, but an `FnOnce` consume them only once
  --> $DIR/move-into-closure.rs:25:21
   |
LL | fn consume_fnmut<F: FnMut()>(_f: F) { }
   |                     ^^^^^^^
help: consider borrowing here
   |
LL |         while let Either::One(_t) = &e { }
   |                                     +

error[E0507]: cannot move out of `e.0`, as `e` is a captured variable in an `FnMut` closure
  --> $DIR/move-into-closure.rs:115:15
   |
LL |     let e = Either::One(X(Y));
   |         - captured outer variable
...
LL |     consume_fnmut(|| {
   |                   -- captured by this `FnMut` closure
...
LL |         match e {
   |               ^
...
LL |             Either::One(_t)
   |                         --
   |                         |
   |                         data moved here
   |                         move occurs because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: `Fn` and `FnMut` closures require captured values to be able to be consumed multiple times, but an `FnOnce` consume them only once
  --> $DIR/move-into-closure.rs:25:21
   |
LL | fn consume_fnmut<F: FnMut()>(_f: F) { }
   |                     ^^^^^^^
help: consider borrowing here
   |
LL |         match &e {
   |               +

error[E0507]: cannot move out of `e.0`, as `e` is a captured variable in an `FnMut` closure
  --> $DIR/move-into-closure.rs:121:15
   |
LL |     let e = Either::One(X(Y));
   |         - captured outer variable
...
LL |     consume_fnmut(|| {
   |                   -- captured by this `FnMut` closure
...
LL |         match e {
   |               ^
...
LL |             Either::One(_t) => (),
   |                         --
   |                         |
   |                         data moved here
   |                         move occurs because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: `Fn` and `FnMut` closures require captured values to be able to be consumed multiple times, but an `FnOnce` consume them only once
  --> $DIR/move-into-closure.rs:25:21
   |
LL | fn consume_fnmut<F: FnMut()>(_f: F) { }
   |                     ^^^^^^^
help: consider borrowing here
   |
LL |         match &e {
   |               +

error[E0507]: cannot move out of `x.0`, as `x` is a captured variable in an `FnMut` closure
  --> $DIR/move-into-closure.rs:129:25
   |
LL |     let x = X(Y);
   |         - captured outer variable
...
LL |     consume_fnmut(|| {
   |                   -- captured by this `FnMut` closure
...
LL |         let X(mut _t) = x;
   |               ------    ^
   |               |
   |               data moved here
   |               move occurs because `_t` has type `Y`, which does not implement the `Copy` trait
   |
help: `Fn` and `FnMut` closures require captured values to be able to be consumed multiple times, but an `FnOnce` consume them only once
  --> $DIR/move-into-closure.rs:25:21
   |
LL | fn consume_fnmut<F: FnMut()>(_f: F) { }
   |                     ^^^^^^^
help: consider borrowing here
   |
LL |         let X(mut _t) = &x;
   |                         +

error[E0507]: cannot move out of `em.0`, as `em` is a captured variable in an `FnMut` closure
  --> $DIR/move-into-closure.rs:132:38
   |
LL |     let mut em = Either::One(X(Y));
   |         ------ captured outer variable
...
LL |     consume_fnmut(|| {
   |                   -- captured by this `FnMut` closure
...
LL |         if let Either::One(mut _t) = em { }
   |                            ------    ^^
   |                            |
   |                            data moved here
   |                            move occurs because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: `Fn` and `FnMut` closures require captured values to be able to be consumed multiple times, but an `FnOnce` consume them only once
  --> $DIR/move-into-closure.rs:25:21
   |
LL | fn consume_fnmut<F: FnMut()>(_f: F) { }
   |                     ^^^^^^^
help: consider borrowing here
   |
LL |         if let Either::One(mut _t) = &em { }
   |                                      +

error[E0507]: cannot move out of `em.0`, as `em` is a captured variable in an `FnMut` closure
  --> $DIR/move-into-closure.rs:135:41
   |
LL |     let mut em = Either::One(X(Y));
   |         ------ captured outer variable
...
LL |     consume_fnmut(|| {
   |                   -- captured by this `FnMut` closure
...
LL |         while let Either::One(mut _t) = em { }
   |                               ------    ^^
   |                               |
   |                               data moved here
   |                               move occurs because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: `Fn` and `FnMut` closures require captured values to be able to be consumed multiple times, but an `FnOnce` consume them only once
  --> $DIR/move-into-closure.rs:25:21
   |
LL | fn consume_fnmut<F: FnMut()>(_f: F) { }
   |                     ^^^^^^^
help: consider borrowing here
   |
LL |         while let Either::One(mut _t) = &em { }
   |                                         +

error[E0507]: cannot move out of `em.0`, as `em` is a captured variable in an `FnMut` closure
  --> $DIR/move-into-closure.rs:138:15
   |
LL |     let mut em = Either::One(X(Y));
   |         ------ captured outer variable
...
LL |     consume_fnmut(|| {
   |                   -- captured by this `FnMut` closure
...
LL |         match em {
   |               ^^
...
LL |             Either::One(mut _t)
   |                         ------
   |                         |
   |                         data moved here
   |                         move occurs because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: `Fn` and `FnMut` closures require captured values to be able to be consumed multiple times, but an `FnOnce` consume them only once
  --> $DIR/move-into-closure.rs:25:21
   |
LL | fn consume_fnmut<F: FnMut()>(_f: F) { }
   |                     ^^^^^^^
help: consider borrowing here
   |
LL |         match &em {
   |               +

error[E0507]: cannot move out of `em.0`, as `em` is a captured variable in an `FnMut` closure
  --> $DIR/move-into-closure.rs:144:15
   |
LL |     let mut em = Either::One(X(Y));
   |         ------ captured outer variable
...
LL |     consume_fnmut(|| {
   |                   -- captured by this `FnMut` closure
...
LL |         match em {
   |               ^^
...
LL |             Either::One(mut _t) => (),
   |                         ------
   |                         |
   |                         data moved here
   |                         move occurs because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: `Fn` and `FnMut` closures require captured values to be able to be consumed multiple times, but an `FnOnce` consume them only once
  --> $DIR/move-into-closure.rs:25:21
   |
LL | fn consume_fnmut<F: FnMut()>(_f: F) { }
   |                     ^^^^^^^
help: consider borrowing here
   |
LL |         match &em {
   |               +

error[E0507]: cannot move out of `em.0`, as `em` is a captured variable in an `FnMut` closure
  --> $DIR/move-into-closure.rs:151:15
   |
LL |     let mut em = Either::One(X(Y));
   |         ------ captured outer variable
...
LL |     consume_fnmut(|| {
   |                   -- captured by this `FnMut` closure
...
LL |         match em {
   |               ^^
...
LL |             Either::One(mut _t) => (),
   |                         ------
   |                         |
   |                         data moved here
   |                         move occurs because `_t` has type `X`, which does not implement the `Copy` trait
   |
help: `Fn` and `FnMut` closures require captured values to be able to be consumed multiple times, but an `FnOnce` consume them only once
  --> $DIR/move-into-closure.rs:25:21
   |
LL | fn consume_fnmut<F: FnMut()>(_f: F) { }
   |                     ^^^^^^^
help: consider borrowing here
   |
LL |         match &em {
   |               +

error: aborting due to 21 previous errors

For more information about this error, try `rustc --explain E0507`.
